--- a/jason/wedding/wedding.css
+++ b/jason/wedding/wedding.css
@@ -89,6 +89,7 @@
 	border-width: 0px 1px 0px 1px;*/
 	box-shadow: 0 0px 2px #000;
 }
+/*Testing Changes*/
 #gradc2{
 	height:70px;
 	background:-webkit-linear-gradient(#E8A85B, white);
